[project]
name = "mcmobsheet"
version = "1.0.0"
description = "A CLI tool that translates Minecraft /summon and /setblock data into human-readable information"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
dependencies = []

[project.scripts]
mcmobsheet = "mcmobsheet.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcmobsheet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
