[project]
name = "mcmobsheet"
version = "1.0.4"
description = "A CLI tool that translates Minecraft /summon and /setblock data into human-readable information"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
dependencies = []

[project.scripts]
mcmobsheet = "mcmobsheet.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
